agregue otro parrafo

--- a/MiPrimeraPagina.html
+++ b/MiPrimeraPagina.html
@@ -3,7 +3,8 @@
   <head>
     <body>
         <h2>Hola mundo</h2>
-        <p>Este parrafo solo se verá en la rama develop</p>
+        <p>Este parrafo solo se verá en la rama master</p>
+        <p>Otro parrafo</p>
     </body>
   </head>
 </html>
