codigo de factura

--- a/MiPrimeraPagina.html
+++ b/MiPrimeraPagina.html
@@ -5,6 +5,7 @@
         <h2>Hola mundo</h2>
         <p>Este parrafo solo se verá en la rama master</p>
         <p>Otro parrafo</p>
+        <p> Aqui mostramos las facturas</p>
     </body>
   </head>
 </html>
